# RobertaRoyale

./: .cfignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  mainline.toml  package-lock.json  package.json  pyproject.toml  robots.txt  server.js  sitemap.xml
.claude/: settings.local.json
.github/workflows/: deploy-mac.yml  mainline-deploy.yml  python-tests.yml
backend/: .coverage  ai_player.py  coverage.xml  game_logic.py  main.py  pyproject.toml
backend/tests/: README.md  conftest.py  test_ai_player.py  test_game_logic.py  test_main.py
css/: style.css
frontend/: game-client.js  index.html  styles.css
js/: ai.js  app.js  config.js  euchre.js  network.js
scripts/: deploy.sh  restart.sh  start.sh  stop.sh
tests/: ai.test.js  euchre.test.js  mobile.test.js  server.test.js  ux.test.js
