[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "euchre-backend"
version = "0.1.0"
description = "Online Euchre game backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

